# src/storage/api-docs/api-docs.json
@@ -418,6 +418,42 @@
                     }
                 }
             }
+        },
+        "/api/v1/payments": {
+            "post": {
+                "tags": [
+                    "payment"
+                ],
+                "summary": "Create payment request url for user's order",
+                "operationId": "857ed0151f8055bdfc76abd8e6017e58",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "price"
+                                ],
+                                "properties": {
+                                    "price": {
+                                        "type": "numeric",
+                                        "example": "500.000"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid request params supplied"
+                    }
+                }
+            }
         }
     },
     "tags": [
@@ -428,6 +464,10 @@
         {
             "name": "hotels",
             "description": "hotels"
+        },
+        {
+            "name": "payment",
+            "description": "payment"
         }
     ],
     "components": {
